--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto:wght@500;600;700&family=Open+Sans:wght@600;700&family=Lato:wght@600;700&family=Source+Sans+Pro:wght@600;700&display=swap"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
